@@ -49,12 +49,14 @@ public class Cobertura {
                 junitClasspath()
             }
             batchtest(todir:dir("target/surefire-reports")) {
-                fileset(dir:"src/test/java") {
-                    include(name:"**/*Test.java")
+                fileset(dir:"target/test-classes") {
+                    include(name:"**/*Test.class")
                 }
                 formatter(type:"xml")
             }
             sysproperty(key:"net.sourceforge.cobertura.datafile",value:ser)
+            sysproperty(key:"hudson.ClassicPluginStrategy.useAntClassLoader",value:"true")
+            jvmarg(value:"-XX:MaxPermSize=128m")
         }
     }
 
